almost done setting up the cloud stuff

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Frontend/.DS_Store
 Frontend/CLAUDE.md
 /Frontend/node_modules
 Frontend/src/.DS_Store
+/Backend/gcloud/analyze-position/node_modules
