--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Frontend/CLAUDE.md
 Frontend/src/.DS_Store
 /Backend/gcloud/analyze-position/node_modules
 /Backend/gcloud/stockfish-analysis/node_modules
+/Backend/node_modules
