--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "chessground": "^9.1.1",
     "react": "^18.3.1",
     "react-chessboard": "^4.7.2",
+    "react-chessground": "^1.5.0",
     "react-dom": "^18.3.1",
     "stockfish": "^16.0.0"
   },
