--- a/Backend/gcloud/analyze-position/package.json
+++ b/Backend/gcloud/analyze-position/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@google-cloud/functions-framework": "^3.3.0",
     "@google-cloud/vertexai": "^1.9.3",
+    "chess.js": "^1.1.0",
     "node-fetch": "^2.6.9"
   }
 }
