Setup Basic caching of common opening and middle game positions

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Frontend/src/.DS_Store
 /Backend/gcloud/analyze-position/node_modules
 /Backend/gcloud/stockfish-analysis/node_modules
 /Backend/node_modules
+/Backend/gcloud/stockfish-cloud-run/node_modules
+/Backend/gcloud/stockfish-cloud-run/openings-cache
