--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "chess.js": "^1.1.0",
     "chessground": "^9.1.1",
+    "lucide-react": "^0.483.0",
     "react": "^18.3.1",
     "react-chessboard": "^4.7.2",
     "react-dom": "^18.3.1",
