--- a/Backend/gcloud/analyze-position/package.json
+++ b/Backend/gcloud/analyze-position/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "scripts": {
     "start": "functions-framework --target=analyzeChessPosition",
+    "start-audio": "functions-framework --target=transcribeAudioWithGemini --source=transcribe-audio.js",
     "mock": "functions-framework --target=mockAnalyzePosition --source=mock-function.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "gcloud functions deploy analyzeChessPosition --runtime nodejs18 --trigger-http --allow-unauthenticated",
+    "deploy-audio": "gcloud functions deploy transcribeAudioWithGemini --runtime nodejs18 --trigger-http --allow-unauthenticated --source=. --entry-point=transcribeAudioWithGemini --memory=1024MB --timeout=120s",
     "deploy-stockfish": "gcloud functions deploy analyzeWithStockfish --runtime nodejs18 --trigger-http --allow-unauthenticated --source=function-source --entry-point=analyzeWithStockfish",
     "auth": "gcloud auth login && gcloud auth application-default login"
   },
@@ -17,6 +19,7 @@
   "dependencies": {
     "@google-cloud/functions-framework": "^3.3.0",
     "@google-cloud/vertexai": "^1.9.3",
+    "busboy": "^1.6.0",
     "node-fetch": "^2.6.9"
   }
 }
