Stop tracking Frontend/dist and add it to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Frontend/src/.DS_Store
 /Backend/gcloud/stockfish-cloud-run/node_modules
 /Backend/gcloud/stockfish-cloud-run/openings-cache
 /Frontend/dist
+Backend/.DS_Store
