--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "chess-voice-coach",
+  "name": "enpassant-chess-coach",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "predeploy": "node scripts/deploy.js",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
@@ -17,8 +17,7 @@
     "lucide-react": "^0.483.0",
     "react": "^18.3.1",
     "react-chessboard": "^4.7.2",
-    "react-dom": "^18.3.1",
-    "stockfish": "^16.0.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -35,5 +34,5 @@
     "tailwindcss": "^3.4.17",
     "vite": "^6.2.0"
   },
-  "homepage": "https://enpassant.wiki/"
+  "homepage": "https://enpassant.wiki"
 }
