--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Frontend/src/.DS_Store
 /Backend/gcloud/stockfish-cloud-run/openings-cache
 /Frontend/dist
 Backend/.DS_Store
+Frontend/.env.production
+Frontend/.env.local
