--- a/docker-compose.local-gemini-only.yml
+++ b/docker-compose.local-gemini-only.yml
@@ -5,14 +5,16 @@ services:
     build:
       context: ./Backend/gcloud/analyze-position
       dockerfile: Dockerfile.dev 
-    platform: linux/amd64
+    platform: linux/amd64 
     ports:
       - "8081:8081" 
     volumes:
-      - ./Backend/gcloud/analyze-position:/app
+      - ./Backend/gcloud/analyze-position:/app 
+      # Ensure this path is correct for your local machine where you store the key
       - ~/.gcp-keys/enpassant-local-dev-key.json:/app/gcp-key.json:ro
     environment:
       - PORT=8081
+      - HOST=0.0.0.0 
       - GOOGLE_CLOUD_PROJECT=enpassant-459102
       - GOOGLE_APPLICATION_CREDENTIALS=/app/gcp-key.json
     restart: unless-stopped
