--- a/Backend/gcloud/analyze-position/package.json
+++ b/Backend/gcloud/analyze-position/package.json
@@ -16,7 +16,8 @@
     "busboy": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "node-fetch": "^2.6.9"
+    "node-fetch": "^2.6.9",
+    "chess.js": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
